# chaos

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  release.yml
crates/chaos-client/: Cargo.toml
crates/chaos-client/src/: http.rs  lib.rs  open_meteo.rs  posts.rs
crates/chaos-desktop/: Cargo.toml  tauri.conf.json
crates/chaos-desktop/capabilities/: default.json
crates/chaos-desktop/icons/: icon.icns
crates/chaos-desktop/src/: lib.rs  main.rs
crates/chaos-domain/: Cargo.toml
crates/chaos-domain/src/: api.rs  auth.rs  calendar.rs  dashboard.rs  home.rs  lib.rs  links.rs  sanitize.rs  search.rs  service.rs
crates/chaos-server/: Cargo.toml  chaos.example.toml
crates/chaos-server/migrations/: 0001_links.sql  0002_archive_fts.sql  0003_auth_calendar.sql  0004_links_created_by.sql  0005_views_analytics.sql
crates/chaos-server/src/: api.rs  archiver.rs  auth.rs  backup.rs  cache.rs  config.rs  db.rs  db_auth.rs  db_calendar.rs  db_events.rs  db_posts.rs  db_views.rs  home_assistant.rs  http_util.rs  ics.rs  import.rs  main.rs  metadata.rs  monitor.rs  notify.rs  state.rs
crates/chaos-server/src/api/: auth.rs  calendar.rs  collections.rs  error.rs  home.rs  icons.rs  links.rs  mod.rs  search.rs  services.rs  views.rs  widgets.rs
crates/chaos-server/src/widgets/: feed.rs  mod.rs  posts.rs  releases.rs  stats.rs  systemd.rs  threads.rs  weather.rs
crates/chaos-ui/: Cargo.toml
crates/chaos-ui/src/: analytics.rs  components.rs  date_util.rs  echarts.rs  hooks.rs  lib.rs  offline.rs  pages.rs  search.rs  tauri_http.rs  weather_fetch.rs
crates/chaos-ui/src/pages/: about.rs  app.rs  calendar.rs  dashboard.rs  home.rs  links.rs  login.rs  mod.rs  more.rs  news.rs  reader.rs  settings.rs  weather.rs
crates/chaos-web/: Cargo.toml  Trunk.toml  index.html  styles.css
crates/chaos-web/assets/: manifest.json
crates/chaos-web/src/: main.rs
docs/: ARCHITECTURE.md  HANDOFF.md  ROADMAP.md  deployment.md  manga-app.md
docs/adr/: 0001-leptos-trunk-tauri.md  0002-scope-manga-separate-app.md  0003-links-native.md  0004-auth-and-calendar.md
docs/superpowers/plans/: 2026-07-08-home-chart-interactivity.md  2026-07-09-weather-chart-interactions.md  2026-07-09-weather-hourly-chart.md  2026-07-09-weather-view-toggle-horizon.md  2026-07-10-v1.4-ui-refresh.md  2026-07-11-correctness-bugs.md  2026-07-11-improvements.md  2026-07-11-notifications.md  2026-07-11-quicksearch-backup.md  2026-07-11-refactors.md  2026-07-11-robustness.md  2026-07-11-ux-bugs.md  2026-07-11-weather-nulls-and-chart-legibility.md  2026-07-14-offline-core.md  2026-07-14-offline-direct-fetch.md  2026-07-18-posts-tabs.md  2026-07-18-weather-timeaxis.md  2026-07-20-plan-a-posts-fixes.md  2026-07-20-plan-b-news-page-favicons.md  2026-07-20-plan-c-comment-reader.md  2026-07-22-plan-a-views-analytics-backend.md  2026-07-22-plan-b-views-analytics-ui.md  2026-07-23-plan-a-forward-auth-server.md  2026-07-23-plan-b-app-auth-greeting.md
docs/superpowers/specs/: 2026-07-08-home-tab-chart-and-lights-design.md  2026-07-09-weather-chart-interactions-design.md  2026-07-09-weather-hourly-chart-design.md  2026-07-09-weather-view-toggle-horizon-design.md  2026-07-10-v1.4-ui-refresh-design.md  2026-07-14-offline-ux-design.md  2026-07-18-weather-timeaxis-posts-tabs-design.md  2026-07-20-news-tab-reader-design.md  2026-07-22-news-viewed-state-analytics-design.md  2026-07-23-forward-auth-and-greeting-design.md
nix/: module.nix
