[package]
name = "chaos-client"
description = "Typed HTTP client for the chaos API (native + wasm)"
version.workspace = true
edition.workspace = true

[dependencies]
chaos-domain.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
