[package]
name = "chaos-desktop"
description = "Tauri shell embedding the chaos web frontend (desktop + mobile)"
version.workspace = true
edition.workspace = true

# Tauri's Android target builds this crate as a library.
[lib]
name = "chaos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chaos-desktop"
path = "src/main.rs"

[dependencies]
tauri.workspace = true
url.workspace = true

[build-dependencies]
tauri-build.workspace = true
