[package]
name = "chaos-server"
description = "chaos backend: dashboard API, service monitor, link store"
version.workspace = true
edition.workspace = true

[dependencies]
chaos-domain.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
figment.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
