[package]
name = "chaos-server"
description = "chaos backend: dashboard API, service monitor, link store"
version.workspace = true
edition.workspace = true

[dependencies]
chaos-domain.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
figment.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v7"] }
scraper = "0.27.0"
feed-rs = "2"
sysinfo = { version = "0.35", default-features = false, features = ["system", "disk"] }
