[package]
name = "chaos-server"
description = "chaos backend: dashboard API, service monitor, link store"
version.workspace = true
edition.workspace = true

[dependencies]
chaos-domain.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
figment.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v7"] }
scraper = "0.27.0"
feed-rs = "2"
sysinfo = { version = "0.35", default-features = false, features = ["system", "disk"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
hex = "0.4"
rpassword = "7"
ical = "0.11"
chrono-tz = "0.10"
rrule = "0.14"
