[package]
name = "chaos-ui"
description = "Leptos component library and pages shared by web and desktop"
version.workspace = true
edition.workspace = true

[dependencies]
chaos-domain.workspace = true
chaos-client.workspace = true
leptos.workspace = true
leptos_router.workspace = true
url.workspace = true
uuid.workspace = true
