[package]
name = "chaos-web"
description = "Web entrypoint: mounts chaos-ui in the browser (built by trunk)"
version.workspace = true
edition.workspace = true

[dependencies]
chaos-ui.workspace = true
console_error_panic_hook.workspace = true
leptos.workspace = true
url.workspace = true
web-sys = { workspace = true, features = ["Window", "Location", "Storage"] }
js-sys.workspace = true
